feat: Consolidate feedback and improve missing repo handling

--- a/config.properties
+++ b/config.properties
@@ -11,12 +11,15 @@ gitlab_host=gitlab.hfcc.edu
 # Students file location (relative to base_directory)
 students_file=${base_directory}/${current_semester_directory}/students.txt
 
+# Repositories location (relative to base_directory)
+repositories_directory=${base_directory}/${current_semester_directory}/GradedHomework
+
 # Solution code directory (update this per assignment, relative to base_directory)
 solution_directory=${base_directory}/${current_semester_directory}/Homework/Solutions/
 
 # Output configuration (relative to base_directory)
-output_directory=${base_directory}/${current_semester_directory}/GradedHomework/feedback
-output_filename=feedback_report.md
+output_directory=${base_directory}/${current_semester_directory}/feedback
+output_filename=${base_directory}/${current_semester_directory}/feedback/feedback_report.md
 
 # Anthropic API configuration
 anthropic_api_key=
