feat: Configure solutions directory and simplify CLI args

--- a/config.properties
+++ b/config.properties
@@ -15,7 +15,7 @@ students_file=${base_directory}/${current_semester_directory}/students.txt
 repositories_directory=${base_directory}/${current_semester_directory}/GradedHomework
 
 # Solution code directory (update this per assignment, relative to base_directory)
-solution_directory=${base_directory}/${current_semester_directory}/Homework/Solutions/
+solutions_directory=/media/peter/Linux_AppData/HFCC/2021FA-CIS-271-70/Homework/Solutions
 
 # Output configuration (relative to base_directory)
 output_directory=${base_directory}/${current_semester_directory}/feedback
