Migrate to google.genai package and enhance feedback generation
- Update from deprecated google.generativeai to google.genai package
- Update requirements.txt to use google-genai
- Refactor AI client implementations for new API
- Add skip grading feature for students with existing feedback
- Enhance feedback generator with skip logic
- Update tests for new package and features

--- a/config.properties
+++ b/config.properties
@@ -15,14 +15,16 @@ students_file=${base_directory}/${current_semester_directory}/students.txt
 repositories_directory=${base_directory}/${current_semester_directory}/GradedHomework
 
 # Solution code directory (update this per assignment, relative to base_directory)
-solutions_directory=/media/peter/Linux_AppData/HFCC/2021FA-CIS-271-70/Homework/Solutions
+solutions_directory=/media/peter/Linux_AppData/HFCC/2026WI-CIS-271-01/Homework/Solutions
 
 # Output configuration (relative to base_directory)
-output_directory=${base_directory}/${current_semester_directory}/feedback
-output_filename=${base_directory}/${current_semester_directory}/feedback/feedback_report.md
+output_directory=${base_directory}/${current_semester_directory}/GradedHomework/feedback
+output_filename=${base_directory}/${current_semester_directory}/GradedHomework/feedback/feedback_report.md
 
-# Anthropic API configuration
-anthropic_api_key=
+# AI Provider configuration: gemini or anthropic
+ai_provider=gemini
+gemini_api_key=AIzaSyBjGS9Fra_uB7QB1pOMyR_xuLN3XmKcC8Q
+gemini_model=gemini-flash-latest
 
 # Gradle configuration
 gradle_timeout=300
